# travelling-cluster-chain

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  example_sgld.py  gmm_toy_model.cc  gmm_toy_model.h  lda_model.cc  lda_model.h  make_and_run.sh  mpi_gaussian.cc  mpi_gaussian_imbalance.cc  mpi_lda_sgrld.cc  mpi_lda_testdata.cc  plot_traj_length_slowdown.py  preprocess_test_data_sgrld.py  sampler.cc  sampler.h  sgld_model.h  sgld_sampler.cc  sgld_sampler.h  sgrld_sampler.cc  sgrld_sampler.h  view_latencies.py  view_perplexities.py  view_perplexities_testdata.py  view_samples.py  view_sgrld_samples.py
reports/: final-report.bib  final-report.tex  poster.tex  sample.bib
